--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^5.10.4",
     "axios": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
