--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^5.10.4",
     "axios": "^1.3.3",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1"
